horizontal scrollbar in nationality fixed

--- a/style/main.css
+++ b/style/main.css
@@ -66,10 +66,12 @@ paper-input#degree-title {
 paper-dropdown-menu#nationality-dropdown paper-listbox,
 paper-dropdown-menu#education-dropdown paper-listbox,
 paper-dropdown-menu#employment-status-dropdown paper-listbox {
+    overflow-x: hidden;
     width: 294px;
 }
 
 /* --------------------------------------------------------------- */
+
 
 paper-dropdown-menu#nationality-dropdown paper-listbox {
     height: 400px;
